Updated module.info files. Upgraded gradle build files to handle java 9 modules.