@@ -1,6 +1,9 @@
 plugins {
-    id 'java-library'
+    id 'java'
+    id 'application'
 }
+
+import java.util.regex.Matcher
 
 group 'george.stoica'
 version '1.0-SNAPSHOT'
@@ -11,34 +14,43 @@ repositories {
     mavenCentral()
 }
 
+dependencies {
+    implementation project(':webapi.models')
+    testCompileOnly group: 'junit', name: 'junit', version: '4.12'
+    //testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
 ext.moduleName = 'george.stoica.webapi.startup'
 
-compileJava {
+mainClassName = "$moduleName/george.stoica.webapi.startup.WebApiApplication"
+
+run {
     inputs.property("moduleName", moduleName)
-
     doFirst {
-        options.compilerArgs = [
+        jvmArgs = [
                 '--module-path', classpath.asPath,
+                '--module', mainClassName
         ]
         classpath = files()
     }
 }
 
-compileTestJava {
-    inputs.property("noduleName", moduleName)
-
+startScripts {
+    inputs.property("moduleName", moduleName)
     doFirst {
-        options.compilerArgs = [
-                '--modulePath', classpath.asPath,
-                '--add-modules', 'junit',
-                '--add-reads', '$moduleName=junit',
-                '--patch-module', '$moduleName=' + files(sourceSets.test.java.srcDirs).asPath
-        ]
-
         classpath = files()
+        defaultJvmOpts = [
+                '--module-path', 'APP_HOME_LIBS',
+                '--module', mainClassName
+        ]
     }
-}
+    doLast{
+        def bashFile = new File(outputDir, applicationName)
+        String bashContent = bashFile.text
+        bashFile.text = bashContent.replaceFirst('APP_HOME_LIBS', Matcher.quoteReplacement('$APP_HOME/lib'))
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+        def batFile = new File(outputDir, applicationName + ".bat")
+        String batContent = batFile.text
+        batFile.text = batContent.replaceFirst('APP_HOME_LIBS', Matcher.quoteReplacement('%APP_HOME%\\lib'))
+    }
 }
